--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -5,4 +5,6 @@
 <tr><td>automationteststore.TestStore$TestArbi.addallitems</td></tr>
 <tr><td>automationteststore.TestStore$TestArbi.signup</td></tr>
 <tr><td>automationteststore.TestStore$TestArbi.printalltheitems</td></tr>
+<tr><td>automationteststore.TestStore$TestArbi.sumOfProduct</td></tr>
+<tr><td>automationteststore.TestStore$TestArbi.sumoftheprices</td></tr>
 </table>
