--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="96bacf">  <td>24/02/29 20:54:02</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;TestStore$TestArbi.enftest()[pri:0, instance:automationteststore.TestStore$TestArbi@7e242b4d]">&lt;&lt;enftest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1622613647</td>   <td></td> </tr>
-<tr bgcolor="96bacf">  <td>24/02/29 20:53:58</td>   <td>-4150</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestStore$TestArbi.sumoftheprices()[pri:0, instance:automationteststore.TestStore$TestArbi@7e242b4d]">sumoftheprices</td> 
-  <td>main@1622613647</td>   <td></td> </tr>
-<tr bgcolor="96bacf">  <td>24/02/29 20:53:57</td>   <td>-4363</td> <td>&nbsp;</td><td title="&gt;&gt;TestStore$TestArbi.sutup()[pri:0, instance:automationteststore.TestStore$TestArbi@7e242b4d]">&gt;&gt;sutup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1622613647</td>   <td></td> </tr>
+<tr bgcolor="96bacf">  <td>24/03/16 22:57:56</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;TestStore$TestArbi.enftest()[pri:0, instance:automationteststore.TestStore$TestArbi@1e044120]">&lt;&lt;enftest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556520190</td>   <td></td> </tr>
+<tr bgcolor="96bacf">  <td>24/03/16 22:57:47</td>   <td>-9746</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestStore$TestArbi.navigat()[pri:0, instance:automationteststore.TestStore$TestArbi@1e044120]">navigat</td> 
+  <td>main@1556520190</td>   <td></td> </tr>
+<tr bgcolor="96bacf">  <td>24/03/16 22:57:46</td>   <td>-9945</td> <td>&nbsp;</td><td title="&gt;&gt;TestStore$TestArbi.sutup()[pri:0, instance:automationteststore.TestStore$TestArbi@1e044120]">&gt;&gt;sutup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556520190</td>   <td></td> </tr>
 </table>
